[POC] [KG editor] implement KG manipulation features

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,16 +11,21 @@ nexus.endpoint="https://nexus-dev.humanbrainproject.org"
 nexus.endpoint=${?NEXUS_ENDPOINT}
 nexus.iam="https://nexus-iam-dev.humanbrainproject.org"
 nexus.iam=${?NEXUS_IAM}
+nexus.manualspace="manual/poc"
+
 
 oidc.userinfo="https://services.humanbrainproject.eu/oidc/userinfo"
 oidc.userinfo=${?OIDC_USERINFO}
+
+blazegraph.endpoint="http://localhost:9999"
+blazegraph.endpoint=${?BLAZEGRAPH_ENDPOINT}
 
 play.http.filter = Filters
 
 play.filters.enabled += play.filters.hosts.AllowedHostsFilter
 play.filters.hosts {
-  # Allow requests to humanbrainproject domain and local with specific ports number
-  allowed = [".humanbrainproject.org", "localhost:9000", "localhost:8083"]
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = [".humanbrainproject.org", "localhost:9000", "localhost:8083", "localhost:3000"]
 }
 
 # export service configuration
