Added OIDC endpoints

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,8 +14,8 @@ nexus.iam=${?NEXUS_IAM}
 nexus.manualspace="manual/poc"
 
 
-oidc.userinfo="https://services.humanbrainproject.eu/oidc/userinfo"
-oidc.userinfo=${?OIDC_USERINFO}
+auth.userinfo="https://services.humanbrainproject.eu/oidc/userinfo"
+auth.userinfo=${?OIDC_USERINFO}
 
 blazegraph.endpoint="http://localhost:9999"
 blazegraph.endpoint=${?BLAZEGRAPH_ENDPOINT}
