--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,26 +1,55 @@
 # https://www.playframework.com/documentation/latest/Configuration
 pidfile.path = "/dev/null"
 
-es.host="http://localhost:9200"
-es.host=${?ELASTICSEARCH_ENDPOINT}
+es.host = "http://localhost:9200"
+es.host = ${?ELASTICSEARCH_ENDPOINT}
 
-idm.api="https://services.humanbrainproject.eu/idm/v1/api"
-idm.api=${?IDM_API}
+idm.api = "https://services.humanbrainproject.eu/idm/v1/api"
+idm.api = ${?IDM_API}
 
-nexus.endpoint="https://nexus-dev.humanbrainproject.org"
-nexus.endpoint=${?NEXUS_ENDPOINT}
-nexus.iam="https://nexus-iam-dev.humanbrainproject.org"
-nexus.iam=${?NEXUS_IAM}
-nexus.manualspace="manual/poc"
+nexus.endpoint = "https://nexus-dev.humanbrainproject.org"
+nexus.endpoint = ${?NEXUS_ENDPOINT}
+nexus.iam = "https://nexus-iam-dev.humanbrainproject.org"
+nexus.iam = ${?NEXUS_IAM}
+nexus.manualspace = "manual/poc"
 
 
-auth.userinfo="https://services.humanbrainproject.eu/oidc/userinfo"
-auth.userinfo=${?OIDC_USERINFO}
+auth.userinfo = "https://services.humanbrainproject.eu/oidc/userinfo"
+auth.userinfo = ${?OIDC_USERINFO}
 
-blazegraph.endpoint="http://localhost:9999"
-blazegraph.endpoint=${?BLAZEGRAPH_ENDPOINT}
+blazegraph.endpoint = "http://localhost:9999"
+blazegraph.endpoint = ${?BLAZEGRAPH_ENDPOINT}
 
 play.http.filter = Filters
 
 # export service configuration
 export.max_size_in_mega_bytes = 5000 # ~ 5GB
+
+proxy.cache.expiration = 10.minutes
+
+play.filters {
+  enabled += play.filters.gzip.GzipFilter
+
+  gzip {
+
+    # The buffer size to use for gzipped bytes
+    bufferSize = 8k
+
+    # The maximum amount of content to buffer for gzipping in order to calculate the content length before falling back
+    # to chunked encoding.
+    chunkedThreshold = 100k
+
+    contentType {
+
+      # If non empty, then a response will only be compressed if its content type is in this list.
+      whiteList = ["text/*", "application/javascript", "application/json"]
+
+      # The black list is only used if the white list is empty.
+      # Compress all responses except the ones whose content type is in this list.
+      blackList = []
+    }
+  }
+}
+
+play.cache.bindCaches = ["groups-cache"]
+play.cache.createBoundCaches = false
