remove of search

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,15 +13,8 @@ auth.endpoint = "https://services.humanbrainproject.eu"
 auth.endpoint = ${?AUTH_ENDPOINT}
 auth.refreshTokenFile = ${?CREDENTIALS_PATH}
 
-blazegraph.endpoint = "http://localhost:9999"
-blazegraph.endpoint = ${?BLAZEGRAPH_ENDPOINT}
-
 kgquery.endpoint = "http://localhost:8600"
 kgquery.endpoint =  ${?KG_QUERY_ENDPOINT}
-
-editor.subspace = ${?EDITOR_SUBSPACE}
-
-hbp.url = ${?HBP_URL}
 
 play.http.filter = Filters
 play.http.parser.maxMemoryBuffer = 5MB
@@ -55,5 +48,5 @@ play.filters {
   }
 }
 
-play.cache.bindCaches = ["userinfo-cache", "editor-userinfo-cache", "editor-metadata-cache"]
+play.cache.bindCaches = ["userinfo-cache"]
 play.cache.createBoundCaches = false
